--- a/index.html
+++ b/index.html
@@ -24,21 +24,57 @@
     </div>
   </section>  
   <!-- Image Gallery Section -->
-<section class="gallery-section">
+  <section class="gallery-section">
     <h2>Product Gallery</h2>
     <div class="gallery-grid">
-      <img src="image/IMG1.jpg" alt="Product View 1" onclick="openLightbox(this)">
-      <img src="image/IMG2.jpg" alt="Product View 2" onclick="openLightbox(this)">
-      <img src="image/IMG3.jpg" alt="Product View 3" onclick="openLightbox(this)">
-      <img src="image/IMG4.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG5.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG6.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG7.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG8.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG9.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG10.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG11.jpg" alt="Product View 4" onclick="openLightbox(this)">
-      <img src="image/IMG12.jpg" alt="Product View 4" onclick="openLightbox(this)">
+      <div class="gallery-item">
+        <img src="image/IMG1.jpg" alt="Product 1" onclick="openLightbox(this)">
+        <p class="product-name">Lamps With Mantra Sound</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG2.jpg" alt="Product 2" onclick="openLightbox(this)">
+        <p class="product-name">Shiv Lamps With Mantra Sound</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG3.jpg" alt="Product 3" onclick="openLightbox(this)">
+        <p class="product-name">Shiv Lamps With Mantra Sound</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG4.jpg" alt="Product 4" onclick="openLightbox(this)">
+        <p class="product-name">Smart LED Bulb</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG5.jpg" alt="Product 5" onclick="openLightbox(this)">
+        <p class="product-name">Wireless Earbuds</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG6.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG7.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG8.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG9.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG10.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG11.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG12.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">USB Charging Station</p>
+      </div>
     </div>
   </section>
   
