Product name changed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div class="gallery-item">
         <img src="image/IMG11.jpg" alt="Product 6" onclick="openLightbox(this)">
-        <p class="product-name">USB Charging Station</p>
+        <p class="product-name">Night Lamps</p>
       </div>
       <div class="gallery-item">
         <img src="image/IMG12.jpg" alt="Product 6" onclick="openLightbox(this)">
