--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
         <img src="image/IMG12.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
       </div>
+      <div class="gallery-item">
+        <img src="image/IMG13.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">Night Lamps</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG14.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">Night Lamps</p>
+      </div>
+      <div class="gallery-item">
+        <img src="image/IMG15.jpg" alt="Product 6" onclick="openLightbox(this)">
+        <p class="product-name">Night Lamps</p>
+      </div>
     </div>
   </section>
   
