--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
   </section>
   <!-- Buy Form Modal -->
-<div id="buyFormModal" class="modal" style="display:none;">
+<div id="buyFormModal" class="modal" style="display:flex; display:none;">
   <div class="modal-content">
     <span class="close-btn" onclick="closeBuyForm()">&times;</span>
     <h2>Buy Request</h2>
@@ -107,7 +107,9 @@
       <label>Address:</label><br>
       <textarea id="address" name="address" required></textarea><br>
       <label>Mobile Number:</label><br>
-      <input type="tel" id="mobile" name="mobile" required pattern="[0-9]{10}"><br><br>
+      <input type="tel" id="mobile" name="mobile" required pattern="[0-9]{10}"><br>
+      <label>Quantity:</label><br>
+      <input type="number" id="quantity" name="quantity" value="1" min="1" required><br><br>
       <button type="submit">Send Request</button>
     </form>
   </div>
