buy now button for all product

--- a/index.html
+++ b/index.html
@@ -35,58 +35,72 @@
       <div class="gallery-item">
         <img src="image/IMG2.jpg" alt="Product 2" onclick="openLightbox(this)">
         <p class="product-name">Shiv Lamps With Mantra Sound</p>
+        <button onclick="openBuyForm('Shiv Lamps With Mantra Sound')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG3.jpg" alt="Product 3" onclick="openLightbox(this)">
         <p class="product-name">Shiv Lamps With Mantra Sound</p>
+        <button onclick="openBuyForm('Shiv Lamps With Mantra Sound')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG4.jpg" alt="Product 4" onclick="openLightbox(this)">
         <p class="product-name">Smart LED Bulb</p>
+        <button onclick="openBuyForm('Smart LED Bulb')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG5.jpg" alt="Product 5" onclick="openLightbox(this)">
         <p class="product-name">Wireless Earbuds</p>
+        <button onclick="openBuyForm('Wireless Earbuds')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG6.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG7.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG8.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG9.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG10.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG11.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
+        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG12.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
+        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG13.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
+        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG14.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
+        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG15.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
+        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG1.jpg" alt="Product 16" onclick="openLightbox(this)">
