--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
     <img id="lightbox-img" src="" alt="Preview">
   </div>
   
+<!-- Frame Customization Modal -->
+<div id="frameFormModal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeFrameForm()">&times;</span>
+    <h2>Frame Customization Request</h2>
+    <form id="frameForm" onsubmit="submitFrameRequest(event)">
+      <label>Name:</label><br>
+      <input type="text" id="frameName" required><br>
+
+      <label>Address:</label><br>
+      <textarea id="frameAddress" required></textarea><br>
+
+      <label>Mobile Number:</label><br>
+      <input type="tel" id="frameMobile" pattern="[0-9]{10}" required><br>
+
+      <button type="submit">Send Request</button>
+    </form>
+  </div>
+</div>
+<button onclick="openFrameForm()">Customize Frame with Photo & Sound</button>
 
   <!-- Features Section -->
   <section class="features">
