--- a/index.html
+++ b/index.html
@@ -30,104 +30,110 @@
       <div class="gallery-item">
         <img src="image/IMG1.jpg" alt="Product 1" onclick="openLightbox(this)">
         <p class="product-name">Lamps With Mantra Sound</p>
-        <button onclick="openBuyForm('Lamps With Mantra Sound')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG2.jpg" alt="Product 2" onclick="openLightbox(this)">
         <p class="product-name">Shiv Lamps With Mantra Sound</p>
-        <button onclick="openBuyForm('Shiv Lamps With Mantra Sound')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Shiv Lamps With Mantra Sound')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG3.jpg" alt="Product 3" onclick="openLightbox(this)">
         <p class="product-name">Shiv Lamps With Mantra Sound</p>
-        <button onclick="openBuyForm('Shiv Lamps With Mantra Sound')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Shiv Lamps With Mantra Sound')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG4.jpg" alt="Product 4" onclick="openLightbox(this)">
         <p class="product-name">Smart LED Bulb</p>
-        <button onclick="openBuyForm('Smart LED Bulb')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Smart LED Bulb')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG5.jpg" alt="Product 5" onclick="openLightbox(this)">
         <p class="product-name">Wireless Earbuds</p>
-        <button onclick="openBuyForm('Wireless Earbuds')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Wireless Earbuds')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG6.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG7.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG8.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG9.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG10.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG11.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
-        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Night Lamps')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG12.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">USB Charging Station</p>
-        <button onclick="openBuyForm('USB Charging Station')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('USB Charging Station')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG13.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
-        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Night Lamps')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG14.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
-        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Night Lamps')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG15.jpg" alt="Product 6" onclick="openLightbox(this)">
         <p class="product-name">Night Lamps</p>
-        <button onclick="openBuyForm('Night Lamps')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Night Lamps')">🛒 Buy Now</button>
       </div>
       <div class="gallery-item">
         <img src="image/IMG1.jpg" alt="Product 16" onclick="openLightbox(this)">
         <p class="product-name">Lamps With Mantra</p>
-        <button onclick="openBuyForm('Lamps With Mantra')">Buy Now</button>
+        <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra')">🛒 Buy Now</button>
       </div>
     </div>
   </section>
   <!-- Buy Form Modal -->
-<div id="buyFormModal" class="modal" style="display:flex; display:none;">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeBuyForm()">&times;</span>
-    <h2>Buy Request</h2>
+<div id="buyFormModal" class="buy-form-modal">
+  <div class="buy-form-content">
+    <span class="buy-form-close" onclick="closeBuyForm()">&times;</span>
+    <h2 class="buy-form-title">🛍️ Buy Request</h2>
     <form id="buyForm" onsubmit="submitBuyRequest(event)">
       <input type="hidden" id="product" name="product">
-      <label>Name:</label><br>
-      <input type="text" id="name" name="name" required><br>
-      <label>Address:</label><br>
-      <textarea id="address" name="address" required></textarea><br>
-      <label>Mobile Number:</label><br>
-      <input type="tel" id="mobile" name="mobile" required pattern="[0-9]{10}"><br>
-      <label>Quantity:</label><br>
-      <input type="number" id="quantity" name="quantity" value="1" min="1" required><br><br>
-      <button type="submit">Send Request</button>
+
+      <label class="buy-form-label">Name:</label>
+      <input type="text" id="name" name="name" class="buy-form-input" required>
+
+      <label class="buy-form-label">Address:</label>
+      <textarea id="address" name="address" class="buy-form-textarea" required></textarea>
+
+      <label class="buy-form-label">Mobile Number:</label>
+      <input type="tel" id="mobile" name="mobile" class="buy-form-input" required pattern="[0-9]{10}">
+
+      <label class="buy-form-label">Quantity:</label>
+      <input type="number" id="quantity" name="quantity" class="buy-form-input" value="1" min="1" required>
+
+      <button type="submit" class="buy-form-button">📩 Send Request</button>
     </form>
   </div>
 </div>
+
 
   <!-- Lightbox Modal -->
   <div id="lightbox" onclick="closeLightbox()">
@@ -135,25 +141,69 @@
   </div>
   
 <!-- Frame Customization Modal -->
-<div id="frameFormModal" class="modal" style="display:none;">
-  <div class="modal-content">
-    <span class="close-btn" onclick="closeFrameForm()">&times;</span>
-    <h2>Frame Customization Request</h2>
+<div id="frameFormModal" class="frame-request-modal">
+  <div class="frame-request-content">
+    <span class="frame-request-close" onclick="closeFrameForm()">&times;</span>
+    <h2 class="frame-request-title">🖼️ Frame Customization Request</h2>
     <form id="frameForm" onsubmit="submitFrameRequest(event)">
-      <label>Name:</label><br>
-      <input type="text" id="frameName" required><br>
+      <label class="frame-request-label">Name:</label>
+      <input type="text" id="frameName" class="frame-request-input" required>
 
-      <label>Address:</label><br>
-      <textarea id="frameAddress" required></textarea><br>
+      <label class="frame-request-label">Address:</label>
+      <textarea id="frameAddress" class="frame-request-textarea" required></textarea>
 
-      <label>Mobile Number:</label><br>
-      <input type="tel" id="frameMobile" pattern="[0-9]{10}" required><br>
+      <label class="frame-request-label">Mobile Number:</label>
+      <input type="tel" id="frameMobile" class="frame-request-input" pattern="[0-9]{10}" required>
 
-      <button type="submit">Send Request</button>
+      <button type="submit" class="frame-request-button">📩 Send Request</button>
     </form>
   </div>
 </div>
-<button onclick="openFrameForm()">Customize Frame with Photo & Sound</button>
+
+
+<!-- Bulk Order Inquiry Modal -->
+<div id="bulkOrderModal" class="bulk-order-modal">
+  <div class="bulk-order-content">
+    <span class="bulk-order-close" onclick="closeBulkOrderForm()">&times;</span>
+    <h2 class="bulk-order-title">📦 Bulk Order Inquiry</h2>
+    <form id="bulkOrderForm" onsubmit="submitBulkOrder(event)">
+      <label class="bulk-order-label">Name:</label>
+      <input type="text" id="bulkName" class="bulk-order-input" required>
+
+      <label class="bulk-order-label">Business / Shop Name:</label>
+      <input type="text" id="bulkBusiness" class="bulk-order-input" required>
+
+      <label class="bulk-order-label">Mobile Number:</label>
+      <input type="tel" id="bulkMobile" class="bulk-order-input" pattern="[0-9]{10}" required>
+
+      <label class="bulk-order-label">Address:</label>
+      <textarea id="bulkAddress" class="bulk-order-textarea" required></textarea>
+
+      <label class="bulk-order-label">Product Name:</label>
+      <select id="bulkProduct" class="bulk-order-input" required>
+        <option value="" disabled selected>Select a Product</option>
+        <option value="Lamps With Mantra Sound">Lamps With Mantra Sound</option>
+        <option value="Shiv Lamps With Mantra Sound">Shiv Lamps With Mantra Sound</option>
+        <option value="Smart LED Bulb">Smart LED Bulb</option>
+        <option value="Wireless Earbuds">Wireless Earbuds</option>
+        <option value="USB Charging Station">USB Charging Station</option>
+        <option value="Night Lamps">Night Lamps</option>
+        <option value="Custom Sound Frame">Custom Sound Frame</option>
+      </select>
+
+      <label class="bulk-order-label">Quantity:</label>
+      <input type="number" id="bulkQuantity" class="bulk-order-input" min="1" required>
+
+      <button type="submit" class="bulk-order-button">🚀 Send Inquiry</button>
+    </form>
+  </div>
+</div>
+
+
+<section class="button-section">
+  <button onclick="openFrameForm()">🎨 Customize Frame with Photo & Sound</button>
+  <button onclick="openBulkOrderForm()">📦 Bulk Order Inquiry</button>
+</section>
 
   <!-- Features Section -->
   <section class="features">
