code fix in bulk order

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 </div>
 
 
-<!-- Bulk Order Inquiry Modal -->
+<!-- Bulk Order Enquiry Modal -->
 <div id="bulkOrderModal" class="bulk-order-modal">
   <div class="bulk-order-content">
     <span class="bulk-order-close" onclick="closeBulkOrderForm()">&times;</span>
-    <h2 class="bulk-order-title">📦 Bulk Order Inquiry</h2>
+    <h2 class="bulk-order-title">📦 Bulk Order Enquiry</h2>
     <form id="bulkOrderForm" onsubmit="submitBulkOrder(event)">
       <label class="bulk-order-label">Name:</label>
       <input type="text" id="bulkName" class="bulk-order-input" required>
@@ -194,7 +194,7 @@
       <label class="bulk-order-label">Quantity:</label>
       <input type="number" id="bulkQuantity" class="bulk-order-input" min="1" required>
 
-      <button type="submit" class="bulk-order-button">🚀 Send Inquiry</button>
+      <button type="submit" class="bulk-order-button">🚀 Send Enquiry</button>
     </form>
   </div>
 </div>
@@ -202,7 +202,7 @@
 
 <section class="button-section">
   <button onclick="openFrameForm()">🎨 Customize Frame with Photo & Sound</button>
-  <button onclick="openBulkOrderForm()">📦 Bulk Order Inquiry</button>
+  <button onclick="openBulkOrderForm()">📦 Bulk Order Enquiry</button>
 </section>
 
   <!-- Features Section -->
